blockml/test/errors/12_chart/e198/e198_one.view
view: e198_one
table: 1
fields:
- dimension: dim1
  sql: 111
